add linkes for all

--- a/index.html
+++ b/index.html
@@ -23,22 +23,32 @@
                     <p>cymatlin@gmail.com</p>
                 </div>
             </a>
-            
-            <div class="card" id="linkedin">
-                <i class="fab fa-linkedin"></i>
-                <p>LinkedIn</p>
-            </div>
-            <div class="card" id="facebook">
-                <i class="fab fa-facebook-square"></i>
-                <p>Facebook</p>
-            </div>
-            <div class="card" id="instagram">
-                <i class="fab fa-instagram"></i>
-                <p>Instagram</p>
-            </div>            
+            <a href="https://www.linkedin.com/in/yechezkel-matlin" class="card" style="text-decoration: none; color: inherit;">
+                <div  id="LinkedIn">
+                    <i class="fab fa-linkedin"></i>
+                    <p>LinkedIn</p>
+                </div>
+            </a>
+            <a href="https://www.facebook.com/profile.php?id=100077306290114&mibextid=LQQJ4d" class="card" style="text-decoration: none; color: inherit;">
+                <div  id="Facebook">
+                    <i class="fab fa-facebook-square"></i>
+                    <p>Facebook</p>
+                </div>
+            </a>
+            <a href="https://www.instagram.com/khzqymtlyn?igsh=OGQ5ZDc2ODk2ZA%3D%3D&utm_source=qr" class="card" style="text-decoration: none; color: inherit;">
+                <div  id="Instagram">
+                    <i class="fab fa-instagram"></i>
+                    <p>Instagram</p>
+                </div>
+            </a>
+            <a href="https://gitlab.com/cymatlin" class="card" style="text-decoration: none; color: inherit;">
+                <div  id="GitLab">
+                    <i class="fab fa-gitlab"></i>
+                    <p>GitLab</p>
+                </div>
+            </a>
             <div class="card" id="gitlab">
-                <i class="fab fa-gitlab"></i>
-                <p>GitLab</p>
+             
             </div>
             <div class="card" id="resume" onclick="openModal()">
                 <i class="fas fa-file-pdf"></i>
