--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div id="header">
             <img src="img/p3.jpeg" alt="Your Picture">
-            <h1 id="name">Cezky Matlin</h1>
+            <h1 id="name">Chezky Matlin</h1>
         </div>
         <div id="cards">
             <a href="mailto:cymatlin@gmail.com" class="card" style="text-decoration: none; color: inherit;">
