add phon number

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
                     <p>cymatlin@gmail.com</p>
                 </div>
             </a>
+            <a href="tel:+9720537301993" class="card" style="text-decoration: none; color: inherit;">
+                <div id="phone">
+                    <i class="fas fa-phone"></i>
+                    <p>Phone</p>
+                    <p>+972 053 730 1993</p>
+                </div>
+            </a>            
             <a href="https://www.linkedin.com/in/yechezkel-matlin" class="card" style="text-decoration: none; color: inherit;">
                 <div  id="LinkedIn">
                     <i class="fab fa-linkedin"></i>
@@ -40,7 +47,7 @@
                     <p>GitLab</p>
                 </div>
             </a>
-            <a href="https://www.facebook.com/profile.php?id=100077306290114&mibextid=LQQJ4d" class="card" style="text-decoration: none; color: inherit;">
+            <a href="https://gitlab.com/cymatlin" class="card" style="text-decoration: none; color: inherit;">
                 <div  id="Facebook">
                     <i class="fab fa-facebook-square"></i>
                     <p>Facebook</p>
