--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
             <div id="resumeModal" class="modal">
                 <span class="close" onclick="closeModal()">&times;</span>
                 <iframe class="modal-content" src="pdf/CV.pdf"></iframe>
-            </div>        
+                <a href="pdf/CV.pdf" class="download-link" download>
+                    <i class="fas fa-download"></i>
+                </a>
+            </div>
+                   
         </div>
     </div>
    
