add WhatsApp card

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <div id="header">
-            <img src="img/p3.jpeg" alt="Your Picture">
+            <img src="img/p3.jpeg" id="profile-image"  alt="Your Picture">
             <h1 id="name">Chezky Matlin</h1>
         </div>
         <div id="cards">
@@ -30,7 +30,7 @@
                     <p>Phone</p>
                     <p>+972 053 730 1993</p>
                 </div>
-            </a>            
+            </a>                    
             <a href="https://www.linkedin.com/in/yechezkel-matlin" class="card" style="text-decoration: none; color: inherit;">
                 <div  id="LinkedIn">
                     <i class="fab fa-linkedin"></i>
@@ -47,6 +47,13 @@
                     <p>GitLab</p>
                 </div>
             </a>
+            <a href="https://wa.me/9720537301993" class="card" style="text-decoration: none; color: inherit;">
+                <div id="WhatsApp">
+                    <i class="fab fa-whatsapp"></i>
+                    <p>WhatsApp</p>
+                    <p>+972 053 730 1993</p>
+                </div>
+            </a>    
             <a href="https://gitlab.com/cymatlin" class="card" style="text-decoration: none; color: inherit;">
                 <div  id="Facebook">
                     <i class="fab fa-facebook-square"></i>
