--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <meta http-equiv="Content-Type" content="application/xhtml+xml; charset=utf-8" />
     <meta name = "viewport" content = "user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+
 </head>
 <body>
     <div class="container">
